src/lib/snapshots/cviz__snapshot_tests__tests__two_typed_chain_ascii_all_interfaces_with_types.snap
---
source: src/lib/snapshot_tests.rs
assertion_line: 299
expression: "ascii_snap(&two_typed_chain_graph(), DetailLevel::AllInterfaces, true)"
---
┌──────────────────┐
│   Host Imports   │
├──────────────────┤
│  {handler}       │
│  {store}         │
└──────────────────┘
┌─────────────────────────┐
│   Component Instances   │
├─────────────────────────┤
│  [srv-http]             │
│  [mw-http]              │
│  [db]                   │
│  [cache]                │
└─────────────────────────┘
┌───────────────────────────────────────────┐
│                Connections                │
├───────────────────────────────────────────┤
│  {handler} --- handler✦ --- [srv-http]    │
│  [srv-http] ── handler✦ ──> [mw-http]     │
│  {store} --- store✧ --- [db]              │
│  [db] ── store✧ ──> [cache]               │
│  [mw-http] ──> (Export: handler✦)         │
│  [cache] ──> (Export: store✧)             │
│                                           │
│  ✦ `handle`: (u32) -> bool                │
│  ✧ `get`: (string) -> string              │
└───────────────────────────────────────────┘
