src/lib/snapshots/cviz__snapshot_tests__tests__two_typed_chain_ascii_default_with_types.snap
---
source: src/lib/snapshot_tests.rs
expression: "ascii_snap(&two_typed_chain_graph(), &GraphRenderOpts::default(), true)"
---
╞══ handler ════════════════════════════════════════

                 ┌─────────┐              ┌──────────┐
 ext:handler✦ ──▶│ mw-http │───handler✦──▶│ srv-http │
                 └─────────┘              └──────────┘


╞══ store ════════════════════════════════════════

               ┌───────┐            ┌────┐
 ext:store✧ ──▶│ cache │───store✧──▶│ db │
               └───────┘            └────┘

Signatures:
  ✦ `handle`: (u32) -> bool
  ✧ `get`: (string) -> string
